--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Star Wars Responsive Challenge</title>
+  <meta name="description" content="Characters from the Star Wars series.">
 
   <!-- Responsive viewport tag, tells small screens that it's responsive -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,9 +15,55 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 
   <!-- Stylesheets -->
-
+  <link rel="stylesheet" href="css/float-grid.css" />
+  <link rel="stylesheet" href="css/main.css" />
 </head>
 <body>
+<header>
+    <div class="row">
+      <div class="col-12"><h1>Star Wars Characters</h1>Incomplete list
+      </div>
+    </div>
+    </header>
 
+<main>
+    <div class="row">
+      <div class="col-4">
+        <div class="box"><img src="images/rey_square.png">
+        	<div class="card-text"><h3>Rey</h3><p>Protagonist, from Tatooine</p></div>
+        </div>
+   	  </div>
+      <div class="col-4">
+        <div class="box"><img src="images/finn_square.png">
+        	<div class="card-text"><h3>Finn</h3><p>Stormtrooper, befriends Rey</p></div>
+        </div>
+   	  </div>
+      <div class="col-4">
+        <div class="box"><img src="images/kylo_square.png">
+        	<div class="card-text"><h3>Kylo Ren</h3><p>Main villain, or is he?</p></div>
+        </div>
+   	  </div>   	  
+    </div>
+
+    <div class="row">
+      <div class="col-4">
+        <div class="box"><img src="images/poe_square.png">
+        	<div class="card-text"><h3>Poe Dameron</h3><p>Resistance X-Wing pilot</p></div>
+        </div>
+   	  </div>
+      <div class="col-4">
+        <div class="box"><img src="images/chewbacca_square.png">
+        	<div class="card-text"><h3>Chewbacca</h3><p>Walking carpet</p></div>
+        </div>
+   	  </div>
+      <div class="col-4">
+        <div class="box"><img src="images/yoda_square.png">
+        	<div class="card-text"><h3>Yoda</h3><p>Muppet</p></div>
+        </div>
+   	  </div>   	  
+    </div>    
+
+
+</main>
 </body>
 </html>
